kubernetes/common/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: argo-group  # ArgoCD와 동일한 ALB 그룹을 사용하여 기존 ALB를 재사용
    alb.ingress.kubernetes.io/group.order: '2'  # ArgoCD 다음 순서로 처리
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/security-groups: ${SECURITY_GROUP_ID}  # 보안 그룹 ID로 대체
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/certificate-arn: ${CERTIFICATE_ARN}  # ACM 인증서 ARN으로 대체
spec:
  ingressClassName: alb  # ALB를 사용하기 위해 ingressClassName을 alb로 설정
  rules:
    - host: server.zero-dang.com  # 서버용 서브도메인
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server  # 서버 서비스의 이름
                port:
                  number: 80  # 서버 서비스의 포트 번호
